--- a/app/app.html
+++ b/app/app.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./renderer.js"></script>
     <script>
       {
         const scripts = [];
