Fix bug renderer.js

--- a/app/app.html
+++ b/app/app.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./renderer.js"></script>
+    <script src="./dist/renderer.js"></script>
     <script>
       {
         const scripts = [];
