--- a/app/app.html
+++ b/app/app.html
@@ -14,6 +14,12 @@
         }
       }());
     </script>
+    <style>
+      #root {
+        height: 1920px;
+        overflow-y: hidden;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
